k8s-configuration/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: studysync-prod
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: secret-tiger-docker
      containers:
        - name: backend
          image: kelvtmoni/studysync-backend:latest
          ports:
            - containerPort: 3000
              name: backend-port
          resources:
            requests:
              memory: "256Mi" # Need at least 256MB
              cpu: "250m" # Need at least 0.25 CPU cores
            limits:
              memory: "512Mi" # Max 512MB (killed if exceeded)
              cpu: "500m" # Max 0.5 CPU cores (throttled if exceeded)
