k8s-configuration/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kelvtmoni/studysync-frontend:latest
          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "256Mi" # Need at least 256MB
              cpu: "250m" # Need at least 0.25 CPU cores
            limits:
              memory: "512Mi" # Max 512MB (killed if exceeded)
              cpu: "500m" # Max 0.5 CPU cores (throttled if exceeded)
