k8s-configuration/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    name: backend-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: backend
