k8s-configuration/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    name: frontend-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: frontend
